# AgriConnect-ai

./: CLAUDE.md  Dockerfile.api  Dockerfile.dashboard  EDA.ipynb  PRD.md  README.md  docker-compose.yml  download  env.example  evaluate_pipeline.py  isolation_forest.py  lstm_autoencoder.py  middleware.py  mlflow_utils.py  prophet_model.py  requirements.txt  run_local.bat  schemas.py  store.py  stream_sim.py  test_script.py
backend/: README.md  conftest.py  dummy.txt  gen.ps1  gen_wav.py  pyproject.toml  test_ac.py  test_ac_7.py  test_wrapper.py
backend/alembic/: env.py
backend/alembic/versions/: a66420a825e1_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  produce.py  transaction.py  user.py
backend/app/routers/: admin.py  auth.py  cart.py  catalog.py  chat.py  listings.py  negotiation.py  orders.py
backend/app/schemas/: __init__.py  admin.py  auth.py  cart.py  catalog.py  chat.py  listing.py  negotiation.py  order.py
backend/app/services/: admin_service.py  cart_service.py  catalog_service.py  chat_service.py  listing_service.py  llm_gateway.py  negotiation_engine.py  negotiation_service.py  order_service.py  price_service.py  storage_service.py  stt_service.py  (+1 more)
backend/scripts/: cleanup_prices.py  delete_fake_produce.py  download_whisper.py  get_db.py  seed_prices.py  test_ac8.py  test_catalog.py  test_groq.py  test_minio.py  test_phase10.py  test_phase9.py
backend/tests/: test_demand_flow.py  test_llm_gateway.py  test_negotiation_engine.py  test_stt_service.py  test_supply_flow.py  test_vision_service.py
(+5 files in other folders)
